# mcp-metatrader5-server

./: README.md  fastmcp-readonly.json  fastmcp.json  pyproject.toml
docs/: api_reference.md  getting_started.md  index.md  pydantic_ai_integration.md  trading_guide.md
src/mcp_mt5/: main.py  read_only.py  test_client.py
tests/: README.md  conftest.py  test_connection.py  test_entrypoints.py  test_models.py  test_trading.py
